--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "swiper": "^9.1.1",
     "typescript": "5.0.2"
   },
   "devDependencies": {
